--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "mime-types": "^2.1.35",
     "mousetrap": "^1.6.5",
     "octokit": "^3.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.3.0-canary-a515d753b-20240220",
+    "react-dom": "18.3.0-canary-a515d753b-20240220",
     "react-instantsearch-hooks-web": "^6.33.0",
     "remix-auth": "^3.6.0",
     "remix-auth-oauth2": "^1.11.1",
@@ -84,7 +84,11 @@
     "vite-tsconfig-paths": "^3.5.1",
     "vitest": "^0.34.1"
   },
+  "overrides": {
+    "react": "18.3.0-canary-a515d753b-20240220",
+    "react-dom": "18.3.0-canary-a515d753b-20240220"
+  },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
