--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@codemirror/language": "^6.10.1",
     "@floating-ui/react": "^0.17.0",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@oxide/design-system": "^1.4.0",
-    "@oxide/react-asciidoc": "^0.2.3",
+    "@oxide/design-system": "^1.4.5",
+    "@oxide/react-asciidoc": "^0.2.7",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "@sanity/diff-match-patch": "^3.1.1",
     "@sentry/remix": "^7.15.0",
     "@tanstack/react-query": "^4.3.9",
     "@types/marked": "^4.0.8",
@@ -33,6 +34,7 @@
     "classnames": "^2.3.1",
     "codemirror-asciidoc": "^2.0.1",
     "dayjs": "^1.11.5",
+    "diff-match-patch": "^1.0.5",
     "fuzzysort": "^2.0.1",
     "highlight.js": "^11.6.0",
     "html-entities": "^2.4.0",
