--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
-  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["vite.d.ts", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
     "incremental": true,
     "lib": ["DOM", "DOM.Iterable", "ES2021"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "target": "ES2019",
+    "target": "ES2021",
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
@@ -18,6 +18,8 @@
     },
 
     // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    "noEmit": true,
+    "types": ["@remix-run/node", "vite/client"],
+    "skipLibCheck": true
   }
 }
