--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
     "fuzzysort": "^2.0.1",
     "highlight.js": "^11.6.0",
     "html-entities": "^2.4.0",
-    "instantsearch.js": "^4.46.2",
-    "isbot": "^3.6.8",
-    "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "marked": "^4.2.5",
     "mermaid": "^10.3.0",
@@ -41,7 +38,7 @@
     "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-instantsearch-hooks-web": "^6.33.0",
+    "react-instantsearch": "^7.13.4",
     "remix-auth": "^3.6.0",
     "remix-auth-oauth2": "^1.11.1",
     "simple-text-diff": "^1.7.0",
@@ -69,6 +66,7 @@
     "autoprefixer": "^10.4.8",
     "cssnano": "^5.1.9",
     "eslint": "^8.20.0",
+    "instantsearch.js": "^4.46.2",
     "postcss": "^8.4.31",
     "postcss-import": "^14.1.0",
     "postcss-nesting": "^10.1.4",
