--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "start": "remix-serve build",
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
     "test": "vitest --config test/vitest.config.ts",
     "tsc": "tsc --noEmit",
     "fmt": "prettier --write --ignore-path ./.gitignore  .",
@@ -19,21 +19,18 @@
     "@oxide/design-system": "^1.4.0",
     "@oxide/react-asciidoc": "^0.2.3",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^1.0.0",
-    "@remix-run/node": "^1.19.1",
-    "@remix-run/react": "^1.19.1",
-    "@remix-run/serve": "^1.19.1",
-    "@sentry/remix": "^7.15.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@remix-run/node": "2.13.1",
+    "@remix-run/react": "2.13.1",
+    "@remix-run/serve": "2.13.1",
     "@tanstack/react-query": "^4.3.9",
-    "@types/marked": "^4.0.8",
+    "@vercel/remix": "^2.13.1",
     "classnames": "^2.3.1",
-    "dayjs": "^1.11.5",
+    "dayjs": "^1.11.7",
     "fuzzysort": "^2.0.1",
     "highlight.js": "^11.6.0",
     "html-entities": "^2.4.0",
-    "instantsearch.js": "^4.46.2",
-    "isbot": "^3.6.8",
-    "jsdom": "^22.1.0",
+    "isbot": "^4",
     "lodash": "^4.17.21",
     "marked": "^4.2.5",
     "mermaid": "^10.3.0",
@@ -42,10 +39,9 @@
     "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-instantsearch-hooks-web": "^6.33.0",
+    "react-instantsearch": "^7.13.4",
     "remix-auth": "^3.6.0",
     "remix-auth-oauth2": "^1.11.1",
-    "remix-utils": "^3.3.0",
     "simple-text-diff": "^1.7.0",
     "tunnel-rat": "^0.1.2",
     "zod": "^3.22.3"
@@ -54,37 +50,36 @@
     "@csstools/postcss-global-data": "^1.0.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@playwright/test": "^1.37.1",
-    "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
+    "@remix-run/dev": "2.13.1",
+    "@remix-run/eslint-config": "2.13.1",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/babel__core": "^7.1.19",
     "@types/d3": "^7.4.0",
-    "@types/dompurify": "^3.0.2",
     "@types/express": "^4.17.14",
     "@types/js-cookie": "^3.0.2",
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.191",
+    "@types/marked": "^4.0.8",
     "@types/mime-types": "^2.1.1",
     "@types/mousetrap": "^1.6.9",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-instantsearch-dom": "^6.12.3",
-    "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.8",
     "cssnano": "^5.1.9",
     "eslint": "^8.20.0",
+    "instantsearch.js": "^4.46.2",
     "postcss": "^8.4.31",
-    "postcss-custom-properties": "^13.1.3",
-    "postcss-import": "^15.0.0",
-    "postcss-nesting": "^10.1.10",
+    "postcss-import": "^14.1.0",
+    "postcss-nesting": "^10.1.4",
     "postcss-value-parser": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.2.6",
-    "typescript": "^4.7.4",
-    "vite-tsconfig-paths": "^3.5.1",
-    "vitest": "^0.34.1"
+    "tailwindcss": "^3.3.1",
+    "typescript": "~5.2.2",
+    "vite": "^5.4.9",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.3"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
