--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@ariakit/react": "^0.3.5",
+    "@asciidoctor/core": "^3.0.4",
     "@floating-ui/react": "^0.17.0",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@oxide/design-system": "^1.4.0",
-    "@oxide/react-asciidoc": "^0.2.3",
+    "@oxide/design-system": "^1.7.7--canary.5c25e1b.0",
+    "@oxide/react-asciidoc": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@remix-run/node": "2.13.1",
@@ -33,15 +34,17 @@
     "isbot": "^4",
     "lodash": "^4.17.21",
     "marked": "^4.2.5",
-    "mermaid": "^11.4.0",
+    "mermaid": "^11.4.1",
     "mime-types": "^2.1.35",
     "mousetrap": "^1.6.5",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-instantsearch": "^7.13.4",
+    "remeda": "^2.17.4",
     "remix-auth": "^3.6.0",
     "remix-auth-oauth2": "^1.11.1",
+    "shiki": "^1.23.1",
     "simple-text-diff": "^1.7.0",
     "tunnel-rat": "^0.1.2",
     "zod": "^3.22.3"
