--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@asciidoctor/core": "^3.0.4",
     "@floating-ui/react": "^0.17.0",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@oxide/design-system": "^1.7.7--canary.09651fc.0",
+    "@oxide/design-system": "^1.8.0",
     "@oxide/react-asciidoc": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -83,6 +83,6 @@
     "vitest": "^2.0.3"
   },
   "engines": {
-    "node": "^20.0.0"
+    "node": "^23.0.0"
   }
 }
