--- a/notes/package.json
+++ b/notes/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@sanity/diff-match-patch": "^3.1.1",
     "bun-types": "^1.1.3",
     "elysia": "^1.0.13",
     "elysia-rate-limit": "^3.1.4",
