--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@asciidoctor/core": "^3.0.4",
     "@floating-ui/react": "^0.17.0",
     "@meilisearch/instant-meilisearch": "^0.8.2",
+    "@monaco-editor/loader": "^1.4.0",
+    "@monaco-editor/react": "^4.6.0",
     "@oxide/design-system": "^1.8.2",
     "@oxide/react-asciidoc": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -24,8 +26,7 @@
     "@remix-run/node": "2.13.1",
     "@remix-run/react": "2.13.1",
     "@remix-run/serve": "2.13.1",
-    "@monaco-editor/loader": "^1.4.0",
-    "@monaco-editor/react": "^4.6.0",
+    "@sanity/diff-match-patch": "^3.1.1",
     "@shikijs/monaco": "^1.5.1",
     "@tanstack/react-query": "^4.3.9",
     "@vercel/remix": "^2.13.1",
