--- a/notes/package.json
+++ b/notes/package.json
@@ -12,8 +12,8 @@
     "@sanity/diff-match-patch": "^3.1.1",
     "bun-types": "^1.1.3",
     "elysia": "^1.0.13",
-    "elysia-rate-limit": "^3.1.4",
     "nanoid": "^5.0.7",
+    "tsc": "",
     "zod": "^3.22.4"
   }
 }
