--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@remix-run/react": "2.13.1",
     "@remix-run/serve": "2.13.1",
     "@sanity/diff-match-patch": "^3.1.1",
-    "@shikijs/monaco": "^1.5.1",
+    "@shikijs/monaco": "^1.24.2",
     "@tanstack/react-query": "^4.3.9",
     "@vercel/remix": "^2.13.1",
     "classnames": "^2.3.1",
@@ -40,10 +40,10 @@
     "marked": "^4.2.5",
     "mermaid": "^11.4.1",
     "mime-types": "^2.1.35",
-    "mousetrap": "^1.6.5",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.6.1",
     "react-instantsearch": "^7.13.4",
     "remeda": "^2.17.4",
     "remix-auth": "^3.6.0",
