--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@meilisearch/instant-meilisearch": "^0.8.2",
     "@oxide/design-system": "^1.8.4",
     "@oxide/react-asciidoc": "^1.0.3",
+    "@oxide/rfd.ts": "^0.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@remix-run/node": "2.13.1",
