Update to latest remix. Add single fetch. Remove defer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,15 @@
   "include": ["vite.d.ts", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
     "incremental": true,
-    "lib": ["DOM", "DOM.Iterable", "ES2021"],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "target": "ES2021",
+    "target": "ES2022",
     "strict": true,
-    "allowJs": true,
+    "allowJs": false,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
