--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "dependencies": {
     "@ariakit/react": "^0.3.5",
     "@asciidoctor/core": "^3.0.4",
+    "@codemirror/view": "^6.36.2",
     "@floating-ui/react": "^0.17.0",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@monaco-editor/loader": "^1.4.0",
-    "@monaco-editor/react": "^4.6.0",
-    "@oxide/design-system": "^2.1.0",
+    "@oxide/design-system": "^2.1.1--canary.2a8a8fa.0",
     "@oxide/react-asciidoc": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -27,10 +26,12 @@
     "@remix-run/react": "2.13.1",
     "@remix-run/serve": "2.13.1",
     "@sanity/diff-match-patch": "^3.1.1",
-    "@shikijs/monaco": "^1.24.2",
     "@tanstack/react-query": "^4.3.9",
+    "@uiw/codemirror-themes": "^4.23.7",
+    "@uiw/react-codemirror": "^4.23.7",
     "@vercel/remix": "^2.13.1",
     "classnames": "^2.3.1",
+    "codemirror-asciidoc": "^2.0.1",
     "dayjs": "^1.11.7",
     "fuzzysort": "^2.0.1",
     "highlight.js": "^11.6.0",
