--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@remix-run/react": "2.13.1",
     "@remix-run/serve": "2.13.1",
     "@sanity/diff-match-patch": "^3.1.1",
+    "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^4.3.9",
     "@uiw/codemirror-themes": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
