--- a/package.json
+++ b/package.json
@@ -15,24 +15,27 @@
   "dependencies": {
     "@ariakit/react": "^0.3.5",
     "@asciidoctor/core": "^3.0.4",
-    "@codemirror/view": "^6.36.2",
     "@floating-ui/react": "^0.17.0",
+    "@liveblocks/client": "^2.16.1",
+    "@liveblocks/node": "^2.16.1",
+    "@liveblocks/react": "^2.16.1",
+    "@liveblocks/yjs": "^2.16.1",
     "@meilisearch/instant-meilisearch": "^0.8.2",
     "@oxide/design-system": "^2.2.0",
     "@oxide/react-asciidoc": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@remix-run/node": "2.13.1",
     "@remix-run/react": "2.13.1",
     "@remix-run/serve": "2.13.1",
     "@sanity/diff-match-patch": "^3.1.1",
-    "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^4.3.9",
     "@uiw/codemirror-themes": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
     "@vercel/remix": "^2.13.1",
     "classnames": "^2.3.1",
-    "codemirror-asciidoc": "^2.0.1",
+    "codemirror": "^6.0.1",
     "dayjs": "^1.11.7",
     "fuzzysort": "^2.0.1",
     "highlight.js": "^11.6.0",
@@ -43,6 +46,7 @@
     "mermaid": "^11.4.1",
     "mime-types": "^2.1.35",
     "octokit": "^3.1.2",
+    "radix-ui": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.6.1",
@@ -53,6 +57,7 @@
     "shiki": "^1.5.1",
     "simple-text-diff": "^1.7.0",
     "tunnel-rat": "^0.1.2",
+    "y-codemirror.next": "^0.3.5",
     "zod": "^3.22.3"
   },
   "devDependencies": {
