--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/express": "^4.17.14",
     "@types/js-cookie": "^3.0.2",
     "@types/jsdom": "^21.1.1",
+    "@types/lodash": "^4.17.15",
     "@types/marked": "^4.0.8",
     "@types/mime-types": "^2.1.1",
     "@types/mousetrap": "^1.6.9",
