--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@floating-ui/react": "^0.17.0",
     "@liveblocks/client": "^2.16.1",
     "@liveblocks/node": "^2.16.1",
-    "@liveblocks/react": "^2.16.1",
+    "@liveblocks/react": "^2.18.2",
+    "@liveblocks/react-tiptap": "^2.16.1",
     "@liveblocks/yjs": "^2.16.1",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@oxide/design-system": "^2.2.0",
+    "@oxide/design-system": "^2.2.3",
     "@oxide/react-asciidoc": "^1.0.3",
     "@oxide/rfd.ts": "^0.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -32,10 +33,16 @@
     "@remix-run/serve": "2.15.2",
     "@sanity/diff-match-patch": "^3.1.1",
     "@tanstack/react-query": "^4.3.9",
-    "@uiw/codemirror-themes": "^4.23.7",
+    "@tiptap-pro/extension-drag-handle-react": "^2.17.4",
+    "@tiptap/extension-document": "^2.11.5",
+    "@tiptap/extension-dropcursor": "^2.11.5",
+    "@tiptap/extension-paragraph": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-text": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@vercel/remix": "^2.15.2",
     "classnames": "^2.3.1",
-    "codemirror": "^6.0.1",
     "dayjs": "^1.11.7",
     "fuzzysort": "^2.0.1",
     "highlight.js": "^11.6.0",
@@ -56,7 +63,6 @@
     "shiki": "^1.5.1",
     "simple-text-diff": "^1.7.0",
     "tunnel-rat": "^0.1.2",
-    "y-codemirror.next": "^0.3.5",
     "zod": "^3.22.3"
   },
   "devDependencies": {
