--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ariakit/react": "^0.3.5",
     "@asciidoctor/core": "^3.0.4",
     "@floating-ui/react": "^0.17.0",
+    "@leeoniya/ufuzzy": "^1.0.18",
     "@meilisearch/instant-meilisearch": "^0.8.2",
     "@oxide/design-system": "^2.2.4",
     "@oxide/react-asciidoc": "^1.1.3",
@@ -29,7 +30,6 @@
     "@vercel/remix": "^2.15.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.7",
-    "fuzzysort": "^3.1.0",
     "highlight.js": "^11.6.0",
     "html-entities": "^2.4.0",
     "isbot": "^4",
