--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@floating-ui/react": "^0.17.0",
     "@leeoniya/ufuzzy": "^1.0.18",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@oxide/design-system": "^2.2.4",
+    "@oxide/design-system": "^3.0.2",
     "@oxide/react-asciidoc": "^1.1.3",
     "@oxide/remix-auth-rfd": "^0.1.3",
     "@oxide/rfd.ts": "^0.2.1",
@@ -27,6 +27,7 @@
     "@remix-run/node": "2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "2.15.2",
+    "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^4.3.9",
     "@vercel/remix": "^2.15.2",
     "classnames": "^2.3.1",
@@ -77,8 +78,8 @@
     "postcss-import": "^14.1.0",
     "postcss-nesting": "^10.1.4",
     "postcss-value-parser": "^4.2.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.2.2",
     "vite": "^5.4.9",
     "vite-tsconfig-paths": "^5.0.1",
