--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@chromatic-com/playwright": "^0.12.7",
     "@csstools/postcss-global-data": "^1.0.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@playwright/test": "^1.37.1",
@@ -70,6 +71,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-instantsearch-dom": "^6.12.3",
     "autoprefixer": "^10.4.8",
+    "chromatic": "^13.1.4",
     "cssnano": "^5.1.9",
     "eslint": "^8.20.0",
     "instantsearch.js": "^4.46.2",
