--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fmt": "prettier --write --ignore-path ./.gitignore  .",
     "fmt:check": "prettier --check --ignore-path ./.gitignore . ",
     "e2ec": "npx playwright test --project=chrome",
+    "chromatic": "chromatic --playwright --exit-zero-on-changes",
     "lint": "eslint app"
   },
   "dependencies": {
