--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build": "react-router build",
+    "dev": "react-router dev",
     "test": "vitest --config test/vitest.config.ts",
     "tsc": "tsc --noEmit",
     "fmt": "prettier --write --ignore-path ./.gitignore  .",
@@ -14,79 +14,87 @@
     "lint": "eslint app"
   },
   "dependencies": {
-    "@ariakit/react": "^0.3.5",
+    "@ariakit/react": "^0.4.18",
     "@asciidoctor/core": "^3.0.4",
+    "@eslint/compat": "^1.4.0",
     "@floating-ui/react": "^0.17.0",
-    "@leeoniya/ufuzzy": "^1.0.18",
+    "@leeoniya/ufuzzy": "^1.0.19",
     "@meilisearch/instant-meilisearch": "^0.8.2",
-    "@oxide/design-system": "^3.0.2",
-    "@oxide/react-asciidoc": "^1.1.3",
+    "@oxide/design-system": "^3.1.0",
+    "@oxide/react-asciidoc": "^1.3.0",
     "@oxide/remix-auth-rfd": "^0.1.3",
     "@oxide/rfd.ts": "^0.2.1",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@remix-run/node": "2.15.2",
-    "@remix-run/react": "^2.15.2",
-    "@remix-run/serve": "2.15.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@react-router/fs-routes": "^7.9.2",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
+    "@remix-run/server-runtime": "^2.17.1",
     "@tailwindcss/vite": "^4.1.13",
-    "@tanstack/react-query": "^4.3.9",
-    "@vercel/remix": "^2.15.2",
-    "classnames": "^2.3.1",
-    "dayjs": "^1.11.7",
-    "highlight.js": "^11.6.0",
-    "html-entities": "^2.4.0",
-    "isbot": "^4",
+    "@tanstack/react-query": "^5.90.2",
+    "@vercel/react-router": "^1.2.3",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.18",
+    "highlight.js": "^11.11.1",
+    "html-entities": "^2.6.0",
+    "isbot": "^5",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "marked": "^4.2.5",
-    "mermaid": "^11.4.1",
-    "mime-types": "^2.1.35",
+    "marked": "^16.3.0",
+    "mermaid": "^11.12.0",
+    "mime-types": "^3.0.1",
     "mousetrap": "^1.6.5",
-    "octokit": "^3.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-instantsearch": "^7.13.4",
-    "remeda": "^2.17.4",
-    "remix-auth": "^4.0.0",
-    "remix-auth-oauth2": "^3.0.0",
-    "shiki": "^1.23.1",
+    "octokit": "^5.0.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-instantsearch": "^7.16.3",
+    "react-router": "^7.0.0",
+    "remeda": "^2.32.0",
+    "remix-auth": "^4.2.0",
+    "remix-auth-oauth2": "^3.4.1",
+    "shiki": "^3.13.0",
     "simple-text-diff": "^1.7.0",
     "tunnel-rat": "^0.1.2",
-    "zod": "^3.22.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.4.0",
     "@chromatic-com/playwright": "^0.12.7",
-    "@csstools/postcss-global-data": "^1.0.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@playwright/test": "^1.37.1",
-    "@remix-run/dev": "2.15.2",
-    "@remix-run/eslint-config": "2.15.2",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/d3": "^7.4.0",
-    "@types/express": "^4.17.14",
-    "@types/js-cookie": "^3.0.2",
-    "@types/jsdom": "^21.1.1",
-    "@types/lodash": "^4.14.191",
-    "@types/marked": "^4.0.8",
-    "@types/mime-types": "^2.1.1",
-    "@types/mousetrap": "^1.6.9",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-instantsearch-dom": "^6.12.3",
-    "autoprefixer": "^10.4.8",
-    "chromatic": "^13.1.4",
-    "cssnano": "^5.1.9",
-    "eslint": "^8.20.0",
-    "instantsearch.js": "^4.46.2",
-    "postcss": "^8.4.31",
-    "postcss-import": "^14.1.0",
-    "postcss-nesting": "^10.1.4",
+    "@csstools/postcss-global-data": "^3.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@playwright/test": "^1.55.1",
+    "@react-router/dev": "^7.0.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/d3": "^7.4.3",
+    "@types/express": "^5.0.3",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsdom": "^21.1.7",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.20",
+    "@types/mime-types": "^3.0.1",
+    "@types/mousetrap": "^1.6.15",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-instantsearch-dom": "^6.12.9",
+    "autoprefixer": "^10.4.21",
+    "chromatic": "^13.2.0",
+    "cssnano": "^7.1.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-playwright": "^2.2.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "instantsearch.js": "^4.80.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
     "postcss-value-parser": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.13",
-    "typescript": "~5.2.2",
-    "vite": "^5.4.9",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.3"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.44.1",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": "^22.x"
